[package]
name = "cass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
actix-web = "4.3.1"
mongodb = { version = "2.1.0", default-features = false, features = ["async-std-runtime"] }
uuid = "1.3.1"
serde_json = "1.0.95"
serde = { version = "1.0.152", features = ["derive"] }